@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Net-IMAP-Simple-1.2030.tar.gz 76864 SHA256 120226be4fb8e9edf22297ab7e55cc8e25a8b59b9e19d66c6699a4a52c957473 SHA512 94d2db8a9eade61b9659a1ac72e31ba3a755a8ab9b3a4a8cd604ac74a87fd5ac003ef1dd8d1f9973e15aaf5d7716b9000ac00c22fba36005b42c480c40ed475e WHIRLPOOL 0cce60bc1c29fe600ea35fa912d95c08ca5268c17055f92b0fdee94c20e87b5598412054f03766a2bd2da8c13dfa90af8230ac4b119c7f541a8b7978c70d764b
+DIST Net-IMAP-Simple-1.2034.tar.gz 77541 SHA256 80e51d037a4bcea5d3a0b8cca5292fe5956527fdf41adc17c8b7c36d1ea71ef8 SHA512 c8af7fee345bd2e5dc8e975c09bc141df509dd600f092e962dba264cc49f7ee10d65802af8861343fad5533b4cccdce77347feec20dc0964985b4e8ee7857181 WHIRLPOOL 1fddaf4895f98a3ad14fa39857f2583753569fcf5f307f353e67ceb0e7583349c5c4826de9d473af6ec113fb49db3e12477d2d12174b3e237283a6ad7ac45aed
 EBUILD Net-IMAP-Simple-1.203.000.ebuild 993 SHA256 fd50068089a57c6b20248bd24119acb7cdc493d40cf4b9d06b3caefa2215fcf3 SHA512 fee8f9c4ddc388f0652f721f9b46e403abfa60b02056fc046a705df962bc867bc7f39960533ad83b3b96a685953f9c298093103c0f6b5b0ca5ad2189bbada1fe WHIRLPOOL 21e02660933d4f9c7a287a0d9484318fe41e37955a6ac6227e4fac8485ef0895348db4ac9c1974c8e434b2058f17ec63091687c36be504654705b93707a2144a
-MISC ChangeLog 1484 SHA256 ee5e76666b9b7297b27cd5c85c61c53e5bf429f7799a7ae2606357186bca8265 SHA512 f5e630ea7092a8bb98ca06444fb11e02c14dc3542f8396735e61057deb4a38e46052b50f40fec35a823dfca49f03f0922f4796306da29dcfbd7c2fdf8382e7ef WHIRLPOOL ca6a37a87e3bbaf8120c0bcf995a7f353c166433a44b96e5f63df5c71d03a0de6768ec9d82fb58d3c5948024d3986ab5e49815a94348c86cf3dabd259f2f4579
+EBUILD Net-IMAP-Simple-1.203.400.ebuild 895 SHA256 7d56263378fec856ffb98a99dcf3c745c5c4a876f1aeaf4390677a160db88a8a SHA512 eeb1b54f1ecd94cd0daba78e74d673c0fd01d790e3090eb7bf9f42d5069c6e3231773b2f4ca5178eafe0f2a4d7882a90a2bc963be3ea49ba3b44601e53beca5c WHIRLPOOL 2c11dad4661dec8b6cf41ffed3bac57f804b69d8cf5f718e385c12c5089535d39cc97e8d9f8562d5a79e6bf1ea8d09bec97c0afdd6c2ce921b6358c43e44d5f5
+MISC ChangeLog 1627 SHA256 f0169960f03e988d661b929782dba5028d3591ffb6737b445f9affa0eab9b125 SHA512 52b8ccf2b5c60eb2b0dc3eeb79ac6d81cd6f06470aecc0fe58684a6c66b112b4001ecf2a98bfc58bb720131e9816f2535267e52f380c9960b1248de80298f379 WHIRLPOOL a2b33d830b2d602fbdb47325e16ef1877250f3fab6580e44c1655db14afd11dd4a1524264d98d4d9911af00478f049b5bf1fb18872ed4a9749ae1b5973826263
 MISC metadata.xml 665 SHA256 bd1a5cbbbcefa0ad4f2ae79487aa8ea6f53389b8390e77de99124ad2f1545ba2 SHA512 5f4b7d854122e60c06f4ad5e17e41c2b2fb51452bde6ac7668c056e6fe93c62dbb7ac5d87feaad85d4ba1e3fed6d7f9d87d23500b699e5ceb0a8f640b8871391 WHIRLPOOL 36e6c4e91028daefaa3fc7638245ac6ef4a169818933338a809ca26815d25bad56c90cef5d7363ea313cb716e0d03ffeeba351916f4ad36d190e23c6e92c2046
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlCWcDMACgkQV3J2n04EauyzsACgle4R7mtjkMcyxNudS0Ke2V+c
+MqcAniuBqCInB4YQUT8Z18pwlT2D5Hcp
+=gx0M
+-----END PGP SIGNATURE-----
