@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Net-IMAP-Simple
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-IMAP-Simple/ChangeLog,v 1.8 2012/06/24 12:58:15 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-IMAP-Simple/ChangeLog,v 1.9 2012/11/04 13:40:01 tove Exp $
+
+*Net-IMAP-Simple-1.203.400 (04 Nov 2012)
+
+  04 Nov 2012; Torsten Veller <tove@gentoo.org>
+  +Net-IMAP-Simple-1.203.400.ebuild:
+  Version bump
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
